# dart_randomx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-ffi-lib.sh  pub-publish.sh  pubspec.yaml
.github/workflows/: dart.yml
example/: dart_randomx_example.dart
lib/: dart_randomx.dart  dart_randomx_extension.dart
lib/src/: dart_randomx_base.dart  dart_randomx_extension.dart
test/: dart_randomx_test.dart
wrapper_randomx_library/: .gitignore  CMakeLists-linux-macos.txt  CMakeLists-mingw64.txt  CMakeLists.txt  build-all-mingw64.sh  build-all.sh  build-librandomx-mingw64.sh  build-librandomx.sh  build-wrapper-mingw64.sh  build-wrapper.sh  clean-all-mingw64.sh  clean-all.sh  configuration-monero.h  libwrapper_randomx-arm64.dylib  libwrapper_randomx-x64.dylib  libwrapper_randomx.dylib  wrapper_randomx.c  wrapper_randomx.def  wrapper_randomx.h
